# avro-simple

./: .gitignore  Changes.md  README.md  avro-simple.opam  avro-simple.opam.template  dune-project
.github/: dependabot.yml
.github/workflows/: ci.yml
bench/: README.md  compression_bench.ml  container_bench.ml  cross_language_bench.ml  decode_bench.ml  dune  encode_bench.ml  run_comparison.sh  streaming_benchmark.ml
bench/java/: pom.xml
bench/java/src/main/java/: AvroJavaBench.java
bench/ocaml-avro-codegen/: bench.ml  dune  person_schema.json  person_schema.ml
bench/python/: avro_python_bench.py  requirements.txt
bench/python-avro/: README.md  avro_python_bench.py  requirements.txt
bench/rust/: Cargo.toml
bench/rust-fast/: Cargo.toml
bench/rust-fast/src/: main.rs
bench/rust/src/: main.rs
examples/: basic_usage.ml  container_files.ml  dune  large_file_streaming.ml  schema_evolution.ml
src/: avro.ml  avro.mli  codec.ml  codec.mli  codec_deflate.ml  codec_deflate.mli  codec_null.ml  codec_null.mli  codec_registry.ml  codec_registry.mli  container_reader.ml  container_reader.mli  container_writer.ml  container_writer.mli  decoder.ml  decoder.mli  dune  fingerprint.ml  fingerprint.mli  input.ml  input.mli  logical.ml  logical.mli  output.ml  output.mli  resolution.ml  resolution.mli  schema.ml  schema.mli  schema_json.ml  schema_json.mli  type_name.ml  type_name.mli  value.ml  value.mli
test/: debug_codecs.ml  dune  test_complex_types.ml  test_compression.ml  test_container.ml  test_gzip_api.ml  test_logical_types.ml  test_primitives.ml  test_qcheck_properties.ml  test_records.ml  test_recursive.ml  test_roundtrip.ml  test_schema_aliases.ml  test_schema_evolution.ml  test_schema_json.ml  test_schema_validation.ml
